--- a/Aboutme.html
+++ b/Aboutme.html
@@ -25,7 +25,7 @@
         <div id="am">
             <h2>Hellow</h2>
             <h3>Hi i am Sheikh Adiba Taskin Neha</h3>
-            <p>My name is Sheik Adiba Taskin Neha. I am a student. I am on class 9. I stady on Nabinagar Issamoye Pilot Girls High School.My districk is Bhamon Bhari. And i live in Bhamon Bhari Nabinagar. I like to chate on Discord. My Hobby Wateching Youtube. And i like to play free fire. And Watech Gaming video regularly. I am a big fan of Mythpad.</p>
+            <p>My name is Sheik Adiba Taskin Neha. I am a student. I am on class 9. I stady on Nabinagar Issamoye Pilot Girls High School.My districk is Bhamon Bhari. And i live in Bhamon Bhari Nabinagar. I like to chate on Discord. My Hobby Wateching Youtube. And i like to play free fire. And Watech Gaming video regularly. I am a big fan of Triggered Insaan.</p>
         </div>
     </section>
     
